--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -31,8 +31,9 @@ output:[1] 10395
 
 ```{r, echo = TRUE}
 tot_steps <- tapply(act$steps,as.factor(act$date),sum, na.rm= T)
+png(filename = "hist_total.png")
 hist(tot_steps,main = "Total no. of Steps per day", xlab = "Step Classes", ylab = "Frequency")
-
+dev.off()
 mean(tot_steps)
 median(tot_steps)
 ```
@@ -44,8 +45,9 @@ output: index -> 104 (interval number:835), value -> 206.1698
 
 ```{r , echo= TRUE}
 avg_steps <- tapply(act$steps, INDEX = as.factor(act$interval),mean, na.rm =T)
+png(filename = "TS_avgsteps.png")
 plot(x = names(avg_steps),y = avg_steps,main = "average steps taken for an interval", xlab = "interval no.", ylab = "average no. of steps", type= "l", pch = 3, lwd = 2,col ="blue")
-
+dev.off()
 index = which(avg_steps == max(avg_steps))
 index
 max(avg_steps)
@@ -72,14 +74,18 @@ for (i in 1:nrow(act))
  }
 new_act <- data.frame(steps = new_steps, date = act$date, interval = act$interval)
 ntot_steps <- tapply(new_act$steps,as.factor(new_act$date),sum, na.rm= T) 
+png(filename = "newhist_comp.png")
 par(mfrow = c(2,1))
 hist(tot_steps,main = "Total no. of Steps per day(with NA)", xlab = "Old Step Classes", ylab = "Frequency")
 hist(ntot_steps,main = "Total no. of Steps per day(w/o NA)", xlab = "new Step Classes", ylab = "Frequency")
+dev.off()
 mean(ntot_steps)
 median(ntot_steps)
+png("impact_impact.png")
 par(mfrow= c(2,1))
 barplot(tot_steps,main = "total steps w/o imputation", xlab = "day number",ylab ="total steps per day")
  barplot(ntot_steps,main = "total steps with imputation", xlab = "day number",ylab ="total steps per day")
+dev.off()
 ```
 
 ## Show the pattern for the averages calulated across the five-minute intervals differentiated for weekdays and weekends
@@ -100,6 +106,8 @@ for(i in 1:nrow(new_act))
 }
 Day_type <- as.factor(Day_type)
 new_act <- cbind(new_act,Day_type)
+png(filename = "Pattern_Week.png")
 xyplot(steps ~ interval| Day_type, data = aggregate(steps ~ Day_type + interval, data = new_act, sum), type= "l",ylab = "no of steps", xlab ="interval number", main ="pattern over weekdays & weekends",layout = c(1,2))
+dev.off()
 ```
 
