made the html file size small

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -5,43 +5,32 @@ date: "13 March 2016"
 output: html_document
 ---
 
-### This is an R Markdown document for processing the output as described in the assignment using the Activity.zip archive file downloaded from the url "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip". This document gives a step by step description of the process of computation of the desired results.
+### This document gives a step by step description of the process of computation of the desired results.
 
 ##loading and preprocessing the data
-1. Download the file from the url
-2. list the files in the working directory to ensure file is downloaded
-3. Unzip the file in destination folder "data_activity"
-4. Load the .csv file in R object "act" (dataframe)
+
+Load .csv file in R object "act" (dataframe)
 
 ```{r, echo = TRUE}
-library(knitr)
 library(lattice)
-download.file(url= "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip",destfile= "data_activity.zip",method = "curl")
-list.files(path = "/Users/ramyabalasubramaniam")
-unzip(zipfile = "/Users/ramyabalasubramaniam/data_activity.zip",exdir = "data_activity")
 act <- read.csv(file = "data_activity/activity.csv")
 ```
-## Calculate the total number of steps taken per day - Mean & median of this data
-1. Calculate the total number of steps covered each of the 61 days
-2. Plot the histogram save it as .png file
-3. Calculate the mean - 
-output:[1] 9354.23
-4. Calculate the median -
-output:[1] 10395
+## Calculate total number of steps taken per day - Mean & median of this data
+1. Calculate total number of steps covered each of the 61 days and plot histogram 
+2. Calculate the mean
+3. Calculate the median
 
-```{r TOTAL_STEPS, echo = TRUE}
+```{r TOTAL_STEPS, dpi =36, out.width="600px", out.height="600px",echo = TRUE}
 tot_steps <- tapply(act$steps,as.factor(act$date),sum, na.rm= T)
 hist(tot_steps,main = "Total no. of Steps per day", xlab = "Step Classes", ylab = "Frequency")
 mean(tot_steps)
 median(tot_steps)
 ```
-## Show the average pattern across the different intervals
-1. Calculate the average number of steps taken, averaged across all days for a particular 5-minute interval
-2. Make a time-series plot of the same
-3. Calculate the interval for which the value is maximum and what is that value 
-output: index -> 104 (interval number:835), value -> 206.1698 
+## Show average pattern across different intervals
+1. Calculate average number of steps taken, averaged across all days for a particular 5-minute interval and make time-series plot
+2. Calculate interval for which value is maximum and display value
 
-```{r AVG_STEPS, echo= TRUE}
+```{r AVG_STEPS, dpi = 36, out.width="600px", out.height="600px", echo= TRUE}
 avg_steps <- tapply(act$steps, INDEX = as.factor(act$interval),mean, na.rm =T)
 plot(x = names(avg_steps),y = avg_steps,main = "average steps taken for an interval", xlab = "interval no.", ylab = "average no. of steps", type= "l", pch = 3, lwd = 2,col ="blue")
 index = which(avg_steps == max(avg_steps))
@@ -49,16 +38,12 @@ index
 max(avg_steps)
 avg_steps[index]
 ```
-## Imput the missing values
-1. Create a new data vector for the 17568 value replacing NA values with average value for that 5-minute interval
-2. Combine this vector to a new dataset with the other two column values same as the original dataset
-3. Calculate and plot the histogram of the total numer of steps per day for the new dataset
-4. Also plot the two histograms together (using old and new dataset to see the effect on the overall values
-5. Calculate the mean and median of total number of steps per day using the new dataset
-output: mean [1] 10766.19
-median [1] 10766.19
-6. Make a barplot of the same using old and new dataset to see the effect on individual values
-```{r CMPR_WNA , echo = TRUE}
+## Imput missing values
+1. Create a new data vector for 17568 value replacing NA values with average value for that 5-minute interval and combine this vector to a new dataset with other two column values same as original dataset
+2. Calculate and plot the histogram of total numer of steps per day for new dataset. Plot the other histogram with old dataset simultaneously. For seeing the effect on the values after imputation.
+3. Calculate mean and median of total number of steps per day using new dataset.
+
+```{r CMPR_WNA , dpi = 36, out.width="600px", out.height="600px",echo = TRUE}
 new_steps <- vector(length = nrow(act))
 for (i in 1:nrow(act))
 {
@@ -69,22 +54,18 @@ for (i in 1:nrow(act))
      else new_steps[i] <- act[i,1]
  }
 new_act <- data.frame(steps = new_steps, date = act$date, interval = act$interval)
-ntot_steps <- tapply(new_act$steps,as.factor(new_act$date),sum, na.rm= T) 
-par(mfrow = c(2,1))
-hist(tot_steps,main = "Total no. of Steps per day(with NA)", xlab = "Old Step Classes", ylab = "Frequency")
+ntot_steps <- tapply(new_act$steps,as.factor(new_act$date),sum, na.rm= T)
+par(mfrow= c(2,1))
+hist(tot_steps,main = "Total no. of Steps per day(with NA)", xlab = "old Step Classes", ylab = "Frequency")
 hist(ntot_steps,main = "Total no. of Steps per day(w/o NA)", xlab = "new Step Classes", ylab = "Frequency")
 mean(ntot_steps)
 median(ntot_steps)
-par(mfrow= c(2,1))
-barplot(tot_steps,main = "total steps w/o imputation", xlab = "day number",ylab ="total steps per day")
- barplot(ntot_steps,main = "total steps with imputation", xlab = "day number",ylab ="total steps per day")
 ```
 
 ## Show the pattern for the averages calulated across the five-minute intervals differentiated for weekdays and weekends
-1. Create a new column in the new dataset indicating type of day - weekday or weekend (factor type values)
-2. Plot the total number of steps for the new dataset categorizing using this new factor variable- weekday or weekend
+Create a new column in new dataset indicating type of day - weekday or weekend (factor type values) and plot pattern shown according to this new factor variable.
 
-```{r PAT_WEEK, echo = TRUE}
+```{r PAT_WEEK, dpi = 36, out.width="600px", out.height="600px",echo = TRUE}
 Day <- weekdays(as.Date(new_act$date))
 new_act <- cbind(new_act,Day)
 Day_type <- vector(mode= "character",length = nrow(new_act))
